--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cd client && npm run build",
     "install": "cd client && npm install",
     "heroku-postbuild": "npm run install && npm run build",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
